--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                     Комментарий
                     <textarea class="form__textarea" name="comment" rows="5" placeholder="Введите текст"></textarea>
                     </label>
-                    
+
                     <label class="form__field agreement">
                     <input class="agreement__checkbox visually-hidden" type="checkbox" name="conditions">
                     <svg class="agreement__icon agreement__icon--left" width="16" height="15">
-                        <use href="./images/icons.svg#icon-vector"></use>
+                        <use href="./images/icons.svg#icon-check"></use>
                     </svg>
                     <span class="agreement__label">Соглашаюсь с рассылкой и принимаю <a class="agreement__link" href="#0">Условия
                         договора</a>
